# StandardCpp

./: README.md
project/: CMakeLists.txt  README.md
project/cfg/: params.cfg
project/cmake/: common.cmake
project/examples/: README.md
project/examples/format_text/: CMakeLists.txt  README.md  main.cpp
project/examples/parse_args/: CMakeLists.txt  README.md  main.cpp  params.cfg
project/rhd/: common.hpp
project/rhd/include/rhd/: common.hpp
project/src/: examples.hpp  main.cpp
